[package]
name = "p2ps"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Bicheka/p2ps"
description = "Easy to implement security for p2p connections"
keywords = ["p2p", "secure", "network", "tcp"]
readme = "README.md"
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aes-gcm = "0.10.3"
hkdf = "0.12.4"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = {version = "1.42.0", features = ["io-util"]}
x25519-dalek = "2.0.1"
zstd = "0.13.3"
rand_chacha = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]
tokio = {version = "1.42.0", features = ["full"]}

[features]
default = []
zstd = []
